[gd_scene load_steps=2 format=3 uid="uid://b3msucjnmbnlt"]

[ext_resource type="Script" uid="uid://de6rx7vstk15q" path="res://Enemies/Scripts/vision_area.gd" id="1_ntdgd"]

[node name="VisionArea" type="Area2D"]
collision_layer = 0
monitorable = false
script = ExtResource("1_ntdgd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
